添加教案填写功能

--- a/src/main/resources/static/edu/course/css/outline.css
+++ b/src/main/resources/static/edu/course/css/outline.css
@@ -50,13 +50,16 @@ body>header {
   background-color:rgb(236, 240, 246);
 }
 
-#page-left-aside,
-#page-right-aside {
+#page-left-aside{
   display: flex;
   flex-direction: column;
   flex:1;
 }
-
+#page-right-aside {
+  display: flex;
+  flex-direction: column;
+  flex:1.5;
+}
 main {
   display: flex;
   flex-direction: column;
